--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./PRODIGY_WD_05/style.css">
 </head>
 <body>
   
@@ -20,6 +20,6 @@
             <p id="temperature"></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./PRODIGY_WD_05/script.js"></script>
 </body>
 </html>
